# jjf-survey-analytics

./: .env.example  .flake8  .gitignore  AGGREGATE_SUMMARY_EXPANSION_VERIFICATION.md  AGGREGATE_SUMMARY_VERIFICATION.md  ARCHITECTURE.md  ARCHITECTURE_SIMPLE.md  AUTH_DISABLED_FOR_LOCAL.md  AUTO_SYNC_IMPLEMENTATION.md  CLAUDE.md  DASHBOARD_DESIGN_SUMMARY.md  DASHBOARD_IMPLEMENTATION.md  DASHBOARD_IMPROVEMENTS.md  DATA_SYNC_FIXES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEVELOPER.md  EMPTY_ROW_VALIDATION.md  EXTRACTION_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  HEALTHCHECK_README.md  Makefile  ORGANIZATION_RECOMMENDATIONS.md  POSTGRESQL_SCHEMA_FIX.md  PROJECT_SUMMARY.md  Procfile  QUICK_REFERENCE.md  RAILWAY_DEPLOYMENT_STEPS.md  README.md  REFACTOR_SUMMARY.md  REPORT_ANALYSIS_SUMMARY.md  REPORT_INDEX.md  REPORT_QUICKSTART.md  SECURITY_DEBT.md  SHEET_REFERENCE.md  SIMPLE_APP_README.md  SIMPLE_DB_ANALYSIS.md  SIMPLE_EXTRACTION_RESULTS.md  SIMPLE_INDEX.md  SOT_ARCHITECTURE.md  (+50 more)
.augment/rules/: session-end.js  session-manager.js  session-start.js
.github/ISSUE_TEMPLATE/: security-v1.0.1.md
_archive/databases/: README.md
docs/: AGGREGATE_SUMMARY_IMPLEMENTATION.md  CONSOLIDATION_CHECKLIST.md  CONSOLIDATION_EXAMPLES.md  IMPLEMENTATION_SUMMARY_AGGREGATE_SUMMARY.md  PROGRESS.md  TEXT_CONSOLIDATION_IMPLEMENTATION.md  visual_example_aggregate_summary.html
docs/_archive/: ANONYMOUS_ROW_FILTERING.md  DEPLOYMENT_CHECKLIST.md  LOCAL_SITE_RUNNING.md  MONITOR_RAILWAY_DEPLOYMENT.md  PROJECT_ORGANIZATION_ANALYSIS.md  PROJECT_ORGANIZATION_CLEANUP_SUMMARY.md  PUSHED_TO_GITHUB.md  READY_FOR_RAILWAY_DEPLOYMENT.md  SIMPLIFIED_DASHBOARD.md
docs/data/: MAPPING_RESULTS.md  SHEET_MAPPING_ANALYSIS.md
docs/deployment/: RAILWAY_DEPLOYMENT.md  RAILWAY_HEALTH_CONFIG.md
docs/design/: jjf-dashboard.html
docs/development/: consolidation-summary.md
docs/features/: AUTHENTICATION_CONFIG.md  HEALTHCHECK_ENDPOINTS.md
docs/reference/: PROJECT_ORGANIZATION.md
docs/reports/: REPORT_DESIGN_SPECIFICATIONS.md
docs/work-logs/: work-log-20250924-124704.md
experimental/simple/: QUICKSTART_SIMPLE.md  SIMPLE_EXTRACTOR_TABS.md  simple_extractor.py
healthcheck/: __init__.py  api_validators.py  config_validator.py  dependency_checker.py  e2e_tests.py  monitoring.py
hybrid_surveyor/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
hybrid_surveyor/src/hybrid_surveyor/: __init__.py
hybrid_surveyor/src/hybrid_surveyor/cli/: commands.py  main.py
hybrid_surveyor/src/hybrid_surveyor/config/: __init__.py  container.py  settings.py
hybrid_surveyor/src/hybrid_surveyor/core/: __init__.py  exceptions.py  interfaces.py
hybrid_surveyor/src/hybrid_surveyor/models/: __init__.py  database.py  domain.py
hybrid_surveyor/src/hybrid_surveyor/services/: __init__.py  database_service.py  sheets_service.py
hybrid_surveyor/src/hybrid_surveyor/utils/: health_checker.py  retry_strategy.py
hybrid_surveyor/tests/: __init__.py  conftest.py
hybrid_surveyor/tests/unit/: test_domain_models.py  test_settings.py
scripts/: pre_deploy_check.py  update_version.py
scripts/archive/: README.md  backup_response.json  create_backup.py
scripts/archive/deployment/: debug-railway.sh  deploy-final-fix.sh  deploy-tested-fix.sh  deploy-with-data.sh  redeploy.sh  restore-full-app.sh
scripts/archive/migration/: export_data_for_railway.py  init_database.py  migrate_sqlite_to_postgres.py
scripts/deployment/: railway_init.py
scripts/utils/: db_utils.py
src/analytics/: ai_analyzer.py
src/extractors/: sheets_reader.py
src/normalizers/: survey_normalizer.py
src/services/: auto_sync_service.py  report_generator.py
src/surveyor/cli/: commands.py  main.py
src/surveyor/config/: container.py  settings.py
src/surveyor/models/: __init__.py  base.py  models.py
src/surveyor/repositories/: base_repository.py  spreadsheet_repository.py
src/surveyor/services/: data_extraction_service.py  google_sheets_service.py
src/surveyor/utils/: data_type_detector.py
templates/: aggregate_report.html  base.html  dashboard.html  error.html  health_dashboard.html  jobs.html  login.html  organization_detail.html  organization_report.html  simple_admin.html  simple_base.html  simple_data_nav.html  simple_home.html  simple_tab_view.html  spreadsheet_detail.html  spreadsheets.html  survey_analytics.html  survey_dashboard.html  survey_responses.html  sync_dashboard.html
templates/reports/: aggregate_report.html  contact_detail.html  organization_detail.html  organization_report.html
templates/simple/: admin.html  base.html  data_nav.html  home.html  summary.html  tab_view.html
tests/: test_basic.py
tests/integration/: test_aggregate_summary.py  test_consolidation.py  test_report_consolidation.py  test_specific_org.py  test_templates.py
tests/unit/: test_maturity_fixed.py
